--- a/package.json
+++ b/package.json
@@ -27,8 +27,16 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.2",
     "@prisma/client": "^5.19.1",
+    "@types/pdfkit": "^0.13.5",
+    "blob-stream": "^0.1.3",
+    "date-fns": "^4.1.0",
+    "handlebars": "^4.7.8",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.3",
     "nanoid": "^5.0.7",
     "passport-jwt": "^4.0.1",
+    "pdfkit": "^0.15.0",
+    "puppeteer": "^23.5.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
